--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,15 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.12.1" }
+rand = { version = "0.8.5" }
+getrandom = { version = "0.2", features = ["js"] }
 
 [profile.dev]
 opt-level = 1
 
 [profile.dev.package."*"]
 opt-level = 3
+
+[profile.release]
+opt-level = 's'
+lto = "thin"
